After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727811 - opensslessrc: Does not work with autoaudiosrc
opensslessrc: Does not work with autoaudiosrc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other other
: Normal critical
: 1.3.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-08 10:40 UTC by MD. Ehteshamul Haque Tamvir
Modified: 2014-06-28 08:31 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description MD. Ehteshamul Haque Tamvir 2014-04-08 10:40:04 UTC
Hi,

I was testing recording voice with gstreamer. I used autoaudiosrc to set the recording source. For all desktop platforms such as Linux, Windows and MacOX, recording works fine. But for iOS, i'm getting broken voices and for android, no voice at all. I have tried changing sample rates but no luck. Code is -

    audiosrc = gst_element_factory_make ("osxaudiosrc", NULL);
    g_assert (audiosrc);
    audioconv = gst_element_factory_make ("audioconvert", NULL);
    g_assert (audioconv);
    audiores = gst_element_factory_make ("audioresample", NULL);
    g_assert (audiores);
    /* the encoding and payloading */
    audioenc = gst_element_factory_make ("alawenc", NULL);
    g_assert (audioenc);
    audiopay = gst_element_factory_make ("rtppcmapay", NULL);
    g_assert (audiopay);

    gst_bin_add_many (GST_BIN (pipeline), audiosrc, audioconv, audiores,
                      audioenc, audiopay, NULL);
    
    if (!gst_element_link_many (audiosrc, audioconv, audiores, audioenc,
                                audiopay, NULL)) {
        g_error ("Failed to link audiosrc, audioconv, audioresample, "
                 "audio encoder and audio payloader");
    }
    
    GstCaps *rescaps;
    rescaps = gst_caps_new_simple("audio/x-raw", "format", G_TYPE_STRING, "S32LE",//also tried "S16LE"
                                  "rate", G_TYPE_INT, 48000, //also tried 44100, 32000, 16000
                                  "channels", G_TYPE_INT, 2, //also tried 1
                                  NULL);
    gst_element_link_filtered (audiosrc, audioenc, rescaps);
    gst_element_link (audioenc, audiopay);

Please, help me with this bug.

Regards
MD. Ehteshamul Haque Tamvir
Comment 1 Sebastian Dröge (slomo) 2014-06-23 18:34:41 UTC
commit aa5f55cebec8cc8694ad1f58e6a1e81ada65337c
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jun 23 20:33:54 2014 +0200

    openslessrc: Classification of the element factory should be Source/ not Src/
    
    https://bugzilla.gnome.org/show_bug.cgi?id=727811
Comment 2 Sebastian Dröge (slomo) 2014-06-23 18:36:44 UTC
Can you open another bug for the iOS problem? And also report which version of GStreamer you are using there, and ideally provide a simple test application to reproduce the problem?