openslessrc: Classification of the element factory should be Source/ not Src/

https://bugzilla.gnome.org/show_bug.cgi?id=727811